// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on <GifGrid/> should show GifGrid correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Naruto
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test on <GifGrid/> should show items when use useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Naruto"
      url="https://localhost/"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Naruto"
      url="https://localhost/"
    />
  </div>
</Fragment>
`;
